crates/uitest/fixtures/ty_check/effect_missing.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/effect_missing.fe
---
error[8-0036]: missing effect `Storage` required by `needs_storage`
   ┌─ effect_missing.fe:12:5
   │
12 │     needs_storage()
   │     ^^^^^^^^^^^^^^^ `needs_storage` requires effect `Storage` to be in scope
   │
   = provide it with `with (Storage = value)` or require it via `uses Storage`
